[package]
name = "vrcltbot"
version = "0.1.0"
authors = ["haru2036 <haru2036@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["rlib"]


[dependencies]
serenity = "0.9.1"
tokio = { version = "0.2", features = ["macros", "signal"] }
reqwest = "0.10.9"
bytes = "0.5"
temp-dir = "0.1.11"
